--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-   "seed": "ts-node scripts/loadDB.ts",
+    "seed": "ts-node scripts/loadDB.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^2.0.1",
     "@langchain/community": "^0.3.41",
+    "dotenv": "^16.5.0",
     "langchain": "^0.3.23",
     "next": "15.3.1",
     "openai": "^4.95.1",
@@ -25,7 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
-    "ts-node": "^10.9.2", 
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
