--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,11 @@
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
+  "ts-node":{
+  "compilerOptions":{
+    "module": "Commonjs",
+  }
+  },
   "exclude": [
     "node_modules"
   ]
